--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "org.jetbrains.kotlin.jvm" version '1.1.1'
+    id "org.jetbrains.kotlin.jvm" version '1.2.71'
 }
 
 group 'com.athaydes.kootlin'
@@ -17,7 +17,7 @@ compileKotlin {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.1.1"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
